--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,7 +23,7 @@
       <!--<p class="divider-text">-->
         <!--<span class="bg-light">OR</span>-->
       <!--</p>-->
-      <form th:action="@{/saveuser}" method="post" enctype="multipart/form-data">
+      <form th:action="@{/registration}" th:object="${user}" method="post" enctype="multipart/form-data">
         <div class="form-group input-group">
           <div class="input-group-prepend">
             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
@@ -78,6 +78,19 @@
               <input name="image" class="form-control" placeholder="Upload Profile Image" type="file">
               <label class="form-group input-group" >Upload image</label>
           </div>
+
+            <div class="form-group input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-admin"></i> </span>
+                      </div>
+                     <!-- <input name="role" class="form-control" placeholder="Assign Role">-->
+                      Assign Role:
+                       <select th:field="*{roles}" class="form-control" name="roles[0].id">
+
+                      <option th:each="r: ${roles}" th:value="${r.id}" th:text="${r.name}"></option>
+                      </select>
+            </div>
+
 
           <!--<div class="custom-file">-->
               <!--<input type="file" class="custom-file-input" id="customFile">-->
