name index changed to dashboard. html

--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -7,14 +7,14 @@
         <!-- sidebar menu start-->
         <ul class="sidebar-menu">
             <li class="active">
-                <a class="" href="index.html">
+                <a class="" href="dashboard.html">
                     <i class="icon_house_alt"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
 
             <li class="active">
-                <a class="" href="index.html">
+                <a class="" href="dashboard.html">
                     <i class="icon_document_alt"></i>
                     <span>Forms</span>
                     <span class="menu-arrow arrow_carrot-right"></span>
