--- a/src/main/resources/templates/basic_table.html
+++ b/src/main/resources/templates/basic_table.html
@@ -48,7 +48,7 @@
       </div>
 
       <!--logo start-->
-      <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+      <a href="dashboard.html" class="logo">Nice <span class="lite">Admin</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
@@ -310,7 +310,7 @@
         <!-- sidebar menu start-->
         <ul class="sidebar-menu">
           <li class="">
-            <a class="" href="index.html">
+            <a class="" href="dashboard.html">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
@@ -391,7 +391,7 @@
           <div class="col-lg-12">
             <h3 class="page-header"><i class="fa fa-table"></i> Table</h3>
             <ol class="breadcrumb">
-              <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+              <li><i class="fa fa-home"></i><a href="dashboard.html">Home</a></li>
               <li><i class="fa fa-table"></i>Table</li>
               <li><i class="fa fa-th-list"></i>Basic Table</li>
             </ol>
