all view pages and controller fixed as admin folder added

--- a/src/main/resources/templates/admin/addvendor.html
+++ b/src/main/resources/templates/admin/addvendor.html
@@ -306,7 +306,7 @@
     <!--header end-->
 
     <!--sidebar start-->
-      <div th:replace="/sidebar :: sidebar"></div>
+      <div th:replace="/admin/sidebar :: sidebar"></div>
     <!--sidebar end-->
 
     <!--main content start-->
