--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -17,7 +17,7 @@
     <article class="card-body mx-auto" style="max-width: 400px;">
       <h4 class="card-title mt-3 text-center">Login Page</h4>
 
-      <form th:action="@{/loginsuccess}" method="post">
+      <form th:action="@{/login}" method="post">
 
         <div class="form-group input-group">
           <div class="input-group-prepend">
