--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -30,7 +30,7 @@
                 <ul class="sub">
                     <!--Add functionality -->
                     <li><a class="" th:href="@{/addvendor}">Add Vendor</a></li>
-                    <li><a class="" href="form_validation.html">Add User</a></li>
+                    <li><a class="" th:href="@{/register}">Add User</a></li>
                     <li><a class="" href="form_component.html">Add Purchase</a></li>
                     <li><a class="" href="form_component.html">Add Sales</a></li>
                     <li><a class="" href="form_validation.html">Add Item</a></li>
