--- a/src/main/resources/templates/admin/vendorlist.html
+++ b/src/main/resources/templates/admin/vendorlist.html
@@ -306,7 +306,7 @@
     <!--header end-->
 
     <!--sidebar start-->
-      <div th:replace="/sidebar :: sidebar"></div>
+      <div th:replace="/admin/sidebar :: sidebar"></div>
     <!--sidebar end-->
 
     <!--main content start-->
