added user list and fixed role in list

--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -46,6 +46,7 @@
                 </a>
                 <ul class="sub">
                     <li><a class="" th:href="@{/vendorlist}">Vendor List</a></li>
+                    <li><a class="" th:href="@{/userlist}">User List</a></li>
                     <li><a class="" href="buttons.html">Purchase List</a></li>
                     <li><a class="" href="buttons.html">Sales List</a></li>
                     <li><a class="" href="grids.html">Vendor Purchaselist</a></li>
