--- a/src/main/resources/templates/admin/vendorlist.html
+++ b/src/main/resources/templates/admin/vendorlist.html
@@ -327,6 +327,9 @@
           <!--/generatereport/{format}-->
           <a class="btn btn-primary" th:href="'/generatereport/html'">Export as Excel</a>
           <a class="btn btn-danger" th:href="'/generatereport/pdf'">Export as PDF</a>
+          <div class="x_content">
+
+
           <table class="table table-striped table-bordered">
               <thead>
                 <tr>
@@ -356,6 +359,7 @@
 
           </tbody>
           </table>
+          </div>
         <!-- page end-->
       </section>
     </section>
