--- a/src/main/resources/templates/admin/userlist.html
+++ b/src/main/resources/templates/admin/userlist.html
@@ -68,6 +68,7 @@
                   <table class="table table-striped table-bordered">
                       <thead>
                         <tr>
+                            <th>User Id</th>
                             <th>First Name</th>
                             <th>Last Name</th>
                             <th>Email</th>
@@ -85,6 +86,7 @@
                   <tbody>
 
                   <tr th:each="user:${users}">
+                       <td th:text="${user.id}"></td>
                       <td th:text="${user.fname}"></td>
                       <td th:text="${user.lname}"></td>
                       <td th:text="${user.email}"></td>
@@ -96,7 +98,7 @@
                       <td th:text="${user.roles[0].name}"></td>
                       <td>
                         <div class="btn-group">
-                        <a class="btn btn-primary">Edit</a>
+                        <a th:href="@{/users/findbyid/(id=${user.id})}" class="btn btn-primary" id="editButton">Edit</a>
                         </div>
                       </td>
                       <!--<td><a href="" class="btn btn-warning">Edit</a></td>-->
@@ -128,41 +130,47 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form th:action="@{users/update}" method="put">
+
+           <div class="form-group">
+              <label for="recipient-name" class="col-form-label">Id:</label>
+              <input type="text" class="form-control" id="idEdit" name="id" readonly>
+           </div>
             <div class="form-group">
-              <label for="recipient-name" class="col-form-label">Recipient:</label>
-              <input type="text" class="form-control" id="descriptionEdit" name="desc">
+              <label for="recipient-name" class="col-form-label">First Name:</label>
+              <input type="text" class="form-control" id="fnameEdit" name="fname">
             </div>
 
             <div class="form-group">
-              <label for="recipient-name" class="col-form-label">Recipient:</label>
-              <input type="text" class="form-control" id="recipient-name">
+              <label for="recipient-name" class="col-form-label">Middle Name:</label>
+              <input type="text" class="form-control" id="mnameEdit" name="mname">
             </div>
             <div class="form-group">
-              <label for="recipient-name" class="col-form-label">Recipient:</label>
-              <input type="text" class="form-control" id="recipient-name">
+              <label for="recipient-name" class="col-form-label">Last Name:</label>
+              <input type="text" class="form-control" id="lnameEdit" name="lname">
             </div>
             <div class="form-group">
-              <label for="recipient-name" class="col-form-label">Recipient:</label>
-              <input type="text" class="form-control" id="recipient-name">
+              <label for="recipient-name" class="col-form-label">Email:</label>
+              <input type="text" class="form-control" id="emailEdit" name="email">
             </div>
             <div class="form-group">
-              <label for="recipient-name" class="col-form-label">Recipient:</label>
-              <input type="text" class="form-control" id="recipient-name">
+              <label for="recipient-name" class="col-form-label">Phone Number:</label>
+              <input type="text" class="form-control" id="phoneEdit" name="phone">
             </div>
             <div class="form-group">
-               <label for="recipient-name" class="col-form-label">Recipient:</label>
-               <input type="text" class="form-control" id="recipient-name">
+               <label for="recipient-name" class="col-form-label">Profile Image:</label>
+               <input type="file" class="form-control" id="dataimageEdit" name="dataimage">
             </div>
+
             <div class="form-group">
-               <label for="recipient-name" class="col-form-label">Recipient:</label>
-               <input type="text" class="form-control" id="recipient-name">
+                 <button type="submit" class="btn btn-primary">Submit</button>
+
             </div>
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Send message</button>
+
         </div>
       </div>
     </div>
@@ -175,6 +183,8 @@
   <script src="/js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="/js/scripts.js"></script>
+    <!--custome script for user edit button modal pop up -->
+   <script src="/js/useredit.js"></script>
 
 
 </body>
