--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -33,7 +33,7 @@
                     <li><a class="" th:href="@{/register}">Add User</a></li>
                     <li><a class="" href="form_component.html">Add Purchase</a></li>
                     <li><a class="" href="form_component.html">Add Sales</a></li>
-                    <li><a class="" href="form_validation.html">Add Item</a></li>
+                    <li><a class="" th:href="@{/addItem}">Add Item</a></li>
                     <li><a class="" href="form_component.html">Add VendorPurchase</a></li>
 
                 </ul>
