--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -71,7 +71,7 @@
       </section>
       <div class="text-right">
         <footer>
-                <div class="pull-center">
+                <div class="pull-center" align="center">
                     Esc pvt ltd. @All rights reserved
                     <script type="text/javascript">document.write(new Date().getFullYear());
                     </script>
