--- a/src/main/resources/templates/admin/userlist.html
+++ b/src/main/resources/templates/admin/userlist.html
@@ -99,6 +99,8 @@
                       <td>
                         <div class="btn-group">
                         <a th:href="@{/users/findbyid/(id=${user.id})}" class="btn btn-primary" id="editButton">Edit</a>
+                         <a th:href="@{/delete/{id}(id=${user.email})}" class="btn btn-danger" id="deleteButton">Delete</a>
+
                         </div>
                       </td>
                       <!--<td><a href="" class="btn btn-warning">Edit</a></td>-->
@@ -167,6 +169,27 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="modal" id="deletemodal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Confirm Delete</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Are you sure you want to delete ?</p>
+        </div>
+        <div class="modal-footer">
+          <a  class="btn btn-primary" id="confirmdeletebutton">Yes, Delete</a>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         </div>
       </div>
     </div>
