--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -9,7 +9,11 @@
       </div>
 
       <!--logo start-->
+      <!--<h4>Logged in as:<h5> <div sec:authentication="principal.authorities"></div></h5></h4>-->
+
+
       <a href="dashboard.html" class="logo">Nice <span class="lite">Admin</span></a>
+
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
@@ -42,12 +46,17 @@
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
                             <!--<img th:src="@{'data:image/png;base64,'+${user.base64EncodedImage}}" height="20" width="20"/>-->
-                                <!-- <img alt="" src="img/avatar1_small.jpg">-->
+                      <img th:src="@{'data:image/png;base64,'+${logged_in_user_base64_pic}}" height="40" width="40"/>
+
+                                 <!--<img alt="" th:src="img/avatar1_small.jpg">-->
+                                  <!--<img th:src="@{'data:image/png;base64,'+${user.base64EncodedImage}}" height="20" width="20"/>-->
                             </span>
                              <!-- put link to pull user name from the database-->
                               <!-- <h4> Hello <span sec:authentication="name"></span></h4>-->
-                             <!-- <span th:text ="${#authentication.getPrincipal().getUser().getFname()}"></span>-->
+                              <!--<img th:src ="@{'data:image/png;base64,'+${#authentication.getPrincipal().getUserImage()}}" height="20" width="20"/>-->
+
                             <span class="username">Welcome,  <span sec:authentication="principal.username"> User</span></span>
+
                             <b class="caret"></b>
                         </a>
             <ul class="dropdown-menu extended logout">
@@ -57,7 +66,7 @@
               </li>
 
               <li>
-                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+                <a th:href="@{/logout}"><i class="icon_key_alt"></i> Log Out</a>
               </li>
 
             </ul>
