access denied page implemented and vendor add method authenticated

--- a/src/main/resources/templates/admin/403.html
+++ b/src/main/resources/templates/admin/403.html
@@ -9,7 +9,7 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>404 | Creative - Bootstrap 3 Responsive Admin Template</title>
+  <title>Accedd denied </title>
 
   <!-- Bootstrap CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,21 +29,19 @@
     <script src="js/respond.min.js"></script>
     <![endif]-->
 
-    <!-- =======================================================
-      Theme Name: NiceAdmin
-      Theme URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-      Author: BootstrapMade
-      Author URL: https://bootstrapmade.com
-    ======================================================= -->
+
 </head>
 
 <body>
-  <div class="page-404">
-    <p class="text-404">404</p>
+  <div class="page-404" content="fluid">
+    <p class="text-404" >Access Forbidden</p>
+    <br/>
+    <br/>
+</div>
 
-    <h2>Aww Snap!</h2>
-    <p>Something went wrong or that page doesn’t exist yet. <br><a href="dashboard.html">Return Home</a></p>
-  </div>
+    <h2>Sorry User!</h2>
+    <p>You are not authorized to access this page. <br><a th:href="@{/dashboard/user}">Return Home</a></p>
+
         <div class="text-bottom">
                 <footer>
                         <div class="pull-center" align="center">
