--- a/src/main/resources/templates/admin/userlist.html
+++ b/src/main/resources/templates/admin/userlist.html
@@ -77,7 +77,7 @@
 
                             <th>Profile Image</th>
                             <th>Role</th>
-                            <th>Actions</th>
+                            <th sec:authorize="hasAuthority('ADMIN')" >Actions</th>
                              <!--<th>Edit</th>-->
                             <!-- <th>Delete</th>-->
                         </tr>
@@ -96,9 +96,9 @@
                      <!-- <td><img th:src="@{'data:image/png;base64,'+${user.base64EncodedImage}}" height="50" width="50"/></td>-->
                       <td><img th:src="@{'data:image/png;base64,'+${user.base64EncodedImage}}" height="40" width="40"/></td>
                       <td th:text="${user.roles[0].name}"></td>
-                      <td>
-                        <div class="btn-group">
-                        <a th:href="@{/users/findbyid/(id=${user.id})}" class="btn btn-primary" id="editButton">Edit</a>
+                      <td sec:authorize="hasAuthority('ADMIN')">
+                        <div  class="btn-group">
+                         <a th:href="@{/users/findbyid/(id=${user.id})}" class="btn btn-primary" id="editButton">Edit</a>
                          <a th:href="@{/delete/{id}(id=${user.email})}" class="btn btn-danger" id="deleteButton">Delete</a>
 
                         </div>
