--- a/src/main/resources/templates/admin/vendorlist.html
+++ b/src/main/resources/templates/admin/vendorlist.html
@@ -66,7 +66,7 @@
         <!-- page start-->
      <h1>List of Vendors</h1>
           <!--/generatereport/{format}-->
-          <a class="btn btn-primary" th:href="'/generatereport/html'">Export as Excel</a>
+          <a class="btn btn-primary" th:href="'/generate/excelvendors'">Export as Excel</a>
           <a class="btn btn-danger" th:href="'/generatereport/pdf'">Export as PDF</a>
           <div class="x_content">
 
