backend pagination done

--- a/src/main/resources/templates/admin/userlist.html
+++ b/src/main/resources/templates/admin/userlist.html
@@ -60,8 +60,8 @@
         <!-- page start-->
          <h1>List of Registered Users</h1>
                   <!--/generatereport/{format}-->
-                  <a class="btn btn-primary" th:href="'/generatereport/html'">Export as Excel</a>
-                  <a class="btn btn-danger" th:href="'/generatereport/pdf'">Export as PDF</a>
+                   <!--<a class="btn btn-primary" th:href="'/generatereport/html'">Export as Excel</a>-->
+                  <!-- <a class="btn btn-danger" th:href="'/generatereport/pdf'">Export as PDF</a>-->
                   <div class="x_content">
 
 
