--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -83,7 +83,17 @@
     <!--main content end-->
   </section>
   <!-- container section start -->
+<!-- Footer -->
+<footer class="page-footer font-small blue">
 
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
   <!-- javascripts -->
   <script src="/js/jquery.js"></script>
   <script src="/js/jquery-ui-1.10.4.min.js"></script>
