--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -12,7 +12,8 @@
       <!--<h4>Logged in as:<h5> <div sec:authentication="principal.authorities"></div></h5></h4>-->
 
 
-      <a href="dashboard.html" class="logo">Nice <span class="lite">Admin</span></a>
+      <a href="dashboard.html" class="logo">Stock <span class="lite">Management</span></a>
+      <a  href="dashboard.html" class="logo"><h6>Esc Pvt. Ltd.</h6> <span class="lite"></span></a>
 
       <!--logo end-->
 
