--- a/src/main/resources/templates/admin/register.html
+++ b/src/main/resources/templates/admin/register.html
@@ -37,6 +37,7 @@
 
     <form class="login-form" th:action="@{/registration}" onsubmit="return validation()" th:object="${user}" method="post" enctype="multipart/form-data" >
       <div class="login-wrap">
+      <div><h6>***All fields are mandatory***</h6></div>
         <p class="login-img"><i class="icon_lock_alt"></i></p>
          <div class="input-group">
            <span class="input-group-addon"><i class="icon_profile"></i></span>
