--- a/src/main/resources/templates/admin/vendorlist.html
+++ b/src/main/resources/templates/admin/vendorlist.html
@@ -36,6 +36,7 @@
       Author: BootstrapMade
       Author URL: https://bootstrapmade.com
     ======================================================= -->
+    <!--gfkfkurckuuyrkttckuycuyktkuyxxdjytkuyvfyvukykuykuykuyyukvuykuy      -->
 </head>
 
 <body>
