--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -16,6 +16,13 @@
   <div class="card bg-light">
     <article class="card-body mx-auto" style="max-width: 400px;">
 
+    <div th:if="${param.error}" class="alert alert-danger">
+            Invalid username or password.
+    </div>
+
+    <div th:if="${param.logout != null}" class="alert alert-success">
+                User has successfully been logged out!!!.
+        </div>
      <div style="text-align: center; font-size: 20px; color: green; font-weight: bold">
         <span th:utext="${message}"></span>
 
