sales features included

--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -32,9 +32,9 @@
                     <li><a class="" th:href="@{/addvendor}">Add Vendor</a></li>
                     <li><a class="" th:href="@{/register}">Add User</a></li>
                     <li><a class="" th:href="@{/dashboard/admin/addpurchase}">Add Purchase</a></li>
-                    <li><a class="" href="form_component.html">Add Sales</a></li>
+                    <li><a class="" th:href="@{/dashboard/admin/addsales}">Add Sales</a></li>
                     <li><a class="" th:href="@{/addItem}">Add Item</a></li>
-                    <li><a class="" href="form_component.html">Add VendorPurchase</a></li>
+                    <!--<li><a class="" href="form_component.html">Add VendorPurchase</a></li>-->
 
                 </ul>
             </li>
@@ -48,9 +48,9 @@
                     <li><a class="" th:href="@{/vendorlist}">Vendor List</a></li>
                     <li><a class="" th:href="@{/userlist}">User List</a></li>
                     <li><a class="" th:href="@{/dashboard/admin/purchaseList}">Purchase List</a></li>
-                    <li><a class="" href="buttons.html">Sales List</a></li>
-                    <li><a class="" href="grids.html">Vendor Purchaselist</a></li>
-                    <li><a class="" href="grids.html">Numbering List</a></li>
+                    <li><a class="" th:href="@{/saleslist}">Sales List</a></li>
+                    <!--<li><a class="" href="grids.html">Vendor Purchaselist</a></li>-->
+                    <!--<li><a class="" href="grids.html">Numbering List</a></li>-->
                 </ul>
             </li>
             <li class="sub-menu">
