--- a/src/main/resources/templates/admin/saleslist.html
+++ b/src/main/resources/templates/admin/saleslist.html
@@ -9,19 +9,19 @@
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>List of Purchases</title>
+  <title>List of Sales</title>
 
   <!-- Bootstrap CSS -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- bootstrap theme -->
-  <link href="/css/bootstrap-theme.css" rel="stylesheet">
+  <link href="css/bootstrap-theme.css" rel="stylesheet">
   <!--external css-->
   <!-- font icon -->
-  <link href="/css/elegant-icons-style.css" rel="stylesheet" />
-  <link href="/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="css/elegant-icons-style.css" rel="stylesheet" />
+  <link href="css/font-awesome.min.css" rel="stylesheet" />
   <!-- Custom styles -->
-  <link href="/css/style.css" rel="stylesheet">
-  <link href="/css/style-responsive.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style-responsive.css" rel="stylesheet" />
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
   <!--[if lt IE 9]>
@@ -68,72 +68,38 @@
       <section class="wrapper">
 
         <!-- page start-->
-     <div class="right_col" role="main">
-                 <!-- top tiles -->
-
-                 <!-- /top tiles -->
-
-                 <!-- /page content -->
-                 <div class="row">
-                     <div class="col-md-12 col-sm-12 col-xs-12">
-                         <div class="x_panel">
-                             <div class="x_title">
-                                 <h2>List of Purchases</h2>
-
-                                 <div class="clearfix"></div>
-                             </div>
-                             <div class="x_content">
-
-                                 <table id="datatable" class="table table-striped table-bordered">
-                                     <thead>
-                                     <tr>
-                                         <th>Bill Number</th>
-                                         <th>PO Number</th>
-                                         <th>Vendor</th>
-                                         <th>Ordered Items</th>
-                                         <th>Total price</th>
-                                         <th>Amount Paid</th>
-                                         <th>Remaining Amount</th>
-                                         <th>Actions</th>
-                                     </tr>
-                                     </thead>
-
-                                     <tbody>
-                                     <tr th:each="p,iterStat: ${allPurchased}">
-                                         <td th:text="${p.billNumber}"></td>
-                                         <td th:text="${p.poNumber}"></td>
-                                         <td th:text="${p.vendor.name}"></td>
-                                         <td th:text="${allItemName[__${iterStat.index}__]}"></td>
-
-                                       <!--<td th:text="${[iterStat.index].field}">Emp Account</td>-->
-
-                                      <!--   <div th:text="${#strings.listJoin(#messages.listMsg(messageKeyList), ',')}"></div> -->
-
-                                     <!-- <td th:text="${#strings.listJoin(p.orderedItems, ',')}"></td>-->
+     <h1>List of Sales</h1>
 
 
-                                         <td th:text="${p.totalPrice}"></td>
-                                         <td th:text="${p.amountPaid}"></td>
-                                         <td th:text="${p.remainingAmount}"></td>
-                                         <div class="btn-group">
-                                         <td>
-                                         <div>
-                                         <a class="btn btn-warning" th:href="'/dashboard/admin/updatePurchase/'+${p.id}"><i class="icon_pencil-edit_alt"></i></a>
-                                         <a class="btn btn-primary" th:href="'/dashboard/admin/downloadPurchaseInvoice/'+${p.id}">   <i class="icon_printer"></i></a>
-                                         </div>
-                                         </td>
-                                         </div>
-                                     </tr>
-                                     </tbody>
-                                 </table>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
-             </div>
+          <div class="x_content">
 
-         </div>
 
+          <table id="datatable" class="table table-striped table-bordered">
+              <thead>
+                <tr>
+                    <th>Customer Name</th>
+                    <th>Sales Date</th>
+                    <th>Rate</th>
+                    <th>Quantity</th>
+                    <th>Price</th>
+
+                </tr>
+              </thead>
+
+          <tbody>
+
+          <tr th:each="s:${sales}">
+              <td th:text="${s.customername}"></td>
+              <td th:text="${s.date}"></td>
+              <td th:text="${s.rate}"></td>
+              <td th:text="${s.quantity}"></td>
+              <td th:text="${s.price}"></td>
+
+          </tr>
+
+          </tbody>
+          </table>
+          </div>
         <!-- page end-->
       </section>
     </section>
@@ -151,15 +117,15 @@
   </section>
   <!-- container section end -->
   <!-- javascripts -->
-  <script src="/js/jquery.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
+  <script src="js/jquery.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <!-- nice scroll -->
-  <script src="/js/jquery.scrollTo.min.js"></script>
-  <script src="/js/jquery.nicescroll.js" type="text/javascript"></script>
+  <script src="js/jquery.scrollTo.min.js"></script>
+  <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
-  <script src="/js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
     <!--custom script for pagination***-->
-  <script src="/js/datatablescript.js"></script>
+  <script src="js/datatablescript.js"></script>
 
 
 <!--Datatables-->
