--- a/src/main/resources/templates/admin/userlist.html
+++ b/src/main/resources/templates/admin/userlist.html
@@ -11,6 +11,9 @@
 
   <title>User List</title>
 
+  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+  <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
   <!-- Bootstrap CSS -->
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <!-- bootstrap theme -->
@@ -100,6 +103,21 @@
                         </div>
                       </td>
                       <td th:text ="${user.enabled}"></td>
+                      <td>
+                      <div class="form-group">
+                                     <label for="recipient-name" class="col-form-label"> Is Enabled:</label>
+                                     <input type="checkbox" data-toggle="toggle" data-on="Enabled" data-off="Disabled">
+                                     <input type="checkbox" id="toggle-two">
+                                     <script>
+                                       $(function() {
+                                         $('#toggle').bootstrapToggle({
+                                           on: 'Enabled',
+                                           off: 'Disabled'
+                                         });
+                                       })
+                                     </script>
+                                   </div>
+</td>
                       <!--<td><a href="" class="btn btn-warning">Edit</a></td>-->
                       <!-- <td><a href="" class="btn btn-danger">Delete</a></td>-->
                   </tr>
@@ -156,6 +174,20 @@
               <label for="recipient-name" class="col-form-label">Phone Number:</label>
               <input type="text" class="form-control" id="phoneEdit" name="phone">
             </div>
+
+             <div class="form-group">
+               <label for="recipient-name" class="col-form-label"> Is Enabled:</label>
+               <input type="checkbox" data-toggle="toggle" data-on="Enabled" data-off="Disabled">
+               <input type="checkbox" id="toggle-two">
+               <script>
+                 $(function() {
+                   $('#toggle').bootstrapToggle({
+                     on: 'Enabled',
+                     off: 'Disabled'
+                   });
+                 })
+               </script>
+             </div>
 
             <div class="form-group">
                  <button type="submit" class="btn btn-primary">Submit</button>
